rnsc/tests/snapshots/jvms-001-interface-flag-with_one_exclusive.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class interface abstract final EmptyClass
.super java/lang/Object

.class_end
----- INPUT -----
; Tests JVM spec requirement: interface cannot have mutually exclusive flags
; Expected warning: JVMS-001 (interface with final flag)
; This proves:
;   1. Parser detects interface with final flag (mutually exclusive)
;   2. Warning identifies the specific conflicting flag
;   3. Bytecode is still generated (warning, not error)

.class abstract final interface EmptyClass
.super java/lang/Object

.class_end
----- STDERR -----
[JVMS-001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/rns_integration/jvms/001-interface-flag/with_one_exclusive.rns:8:23 ]
   │
 8 │ .class abstract final interface EmptyClass
   │                 ──┬── ────┬────  
   │                   ╰────────────── 'ACC_FINAL' is exclusive
   │                           │      
   │                           ╰────── 'ACC_INTERFACE' is declared here
   │ 
   │ Help: Consider removing: 'ACC_FINAL'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/JVMS-001
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/EmptyClass.class
  Last modified <DATE>; size 62 bytes
  SHA-256 checksum 156f8c079f506cc6c70aa01b1da85209867e6b47533d2dd52dafe7a9dff8b477
final interface EmptyClass
  minor version: 0
  major version: 69
  flags: (0x0610) ACC_FINAL, ACC_INTERFACE, ACC_ABSTRACT
  this_class: #3                          // EmptyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // EmptyClass
  #4 = Utf8               EmptyClass
{
}
