rnsc/tests/snapshots/jvms-001-interface-flag-with_one_exclusive_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class abstract final interface EmptyClass
.super java/lang/Object

.end class
----- STDERR -----
[JVMS001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/integration/jvms/001-interface-flag/with_one_exclusive.rns:1:23 ]
   │
 1 │ .class abstract final interface EmptyClass
   │                 ──┬── ────┬────  
   │                   ╰────────────── 'ACC_FINAL' is exclusive
   │                           │      
   │                           ╰────── 'ACC_INTERFACE' is declared here
   │ 
   │ Help: Consider removing: 'ACC_FINAL'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/jvms001
───╯
----- HASH -----
not generated
