rnsc/tests/snapshots/rns_warn-class_directive-multiple_access_flags.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public final EmptyClass
.super java/lang/Object

.class_end
----- INPUT -----
.class public public final public EmptyClass
.super java/lang/Object

.class_end
----- STDERR -----
[TODO] Warning: duplicate access flag 'public' in class definition
   ╭─[ test_data/rns_integration/rns_warn/class_directive/multiple_access_flags.rns:1:15 ]
   │
 1 │ .class public public final public EmptyClass
   │        ───┬── ───┬──       ───┬──  
   │           ╰──────────────────────── first defined here
   │                  │            │    
   │                  ╰───────────────── duplicate flag ignored here
   │                               │    
   │                               ╰──── duplicate flag ignored here
   │ 
   │ Note: The `public` flag was already specified. You only need to declare it once.
───╯
----- JAVAP -----
Classfile <TEMP_DIR>/EmptyClass.class
  Last modified <DATE>; size 62 bytes
  SHA-256 checksum 6010eeb2ce551fd0533a3a87774dda36f009569f4239ca4a2bc8cbb60c1239b0
public final class EmptyClass
  minor version: 0
  major version: 69
  flags: (0x0011) ACC_PUBLIC, ACC_FINAL
  this_class: #3                          // EmptyClass
  super_class: #1                         // java/lang/Object
  interfaces: 0, fields: 0, methods: 0, attributes: 0
Constant pool:
  #1 = Class              #2              // java/lang/Object
  #2 = Utf8               java/lang/Object
  #3 = Class              #4              // EmptyClass
  #4 = Utf8               EmptyClass
{
}
